--- a/_U3d/cyber001/背景故事.md
+++ b/_U3d/cyber001/背景故事.md
@@ -23,13 +23,13 @@
 ###简述：  
 
 火&水&木
-跟踪事件-邪教集会-na基因项目
-火的意志-火
-实验体回收-展览会事件-na基因项目
-四年前的实验事故-n基因项目 火
-暴乱事件-实验事故+x公司推波助澜 水
+跟踪事件-邪教集会-na基因项目 事件1
+火的意志-火 
+实验体回收-展览会事件-na基因项目 事件2
+四年前的实验事故-n基因项目 火 事件3
+暴乱事件-实验事故+x公司推波助澜 水 事件3
 
-终章-展览会
+展览会 终章
 
 陈清受雇于x项目后3年，注意到最近有人似乎在跟踪自己，而自己却找不到任何证据。  
  
